# tradingview-mcp

./: CHANGELOG.md  README.md  package.json  pyproject.toml
src/tradingview_mcp/: server.py
src/tradingview_mcp/core/services/: backtest_service.py
