[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tradingview-mcp"
version = "0.1.0"
description = "MCP server for TradingView data — fetch quotes, technicals, and market analysis"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "atilaahmettaner", email = "" },
]
keywords = ["mcp", "tradingview", "trading", "finance", "market-data", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "tradingview-ta>=3.3.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
tradingview-mcp = "tradingview_mcp.server:main"

[project.urls]
Homepage = "https://github.com/atilaahmettaner/tradingview-mcp"
Repository = "https://github.com/atilaahmettaner/tradingview-mcp"
Issues = "https://github.com/atilaahmettaner/tradingview-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["tradingview_mcp"]

[tool.ruff]
line-length = 100  # bumped from 88 — easier to read longer signal/indicator lines
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
# enabling warn_unused_ignores helps catch stale `# type: ignore` comments over time
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
